Rebase and address comments